--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.3.0",
     "plotly.js": "^2.30.1",
     "react": "^18.2.0",
